Remove phone number from footer/header as a contact method. Update formatting, wrap $sliderAcfJSONData variable in conditional to prevent errors if varible cannot be json encoded, set homepage header as absolute

--- a/wp-content/themes/itschrisdinh/resources/css/homepage.css
+++ b/wp-content/themes/itschrisdinh/resources/css/homepage.css
@@ -1,4 +1,8 @@
 body.home {
+  .header {
+    @apply absolute w-full left-1/2 -translate-x-1/2 z-50;
+  }
+
   footer {
     @apply absolute left-1/2 -translate-x-1/2 bottom-0;
   }
